round4/bddreachability/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> spec
Rule 1     spec -> statement
Rule 2     spec -> statement spec
Rule 3     statement -> TYPE ID EQ setexpr SEMICOLON
Rule 4     statement -> SOURCE initlist SEMICOLON
Rule 5     statement -> SOURCEFORMULA boolexpr SEMICOLON
Rule 6     statement -> TARGET boolexpr SEMICOLON
Rule 7     setexpr -> LBRACK NUMBER COMMA NUMBER RBRACK
Rule 8     setexpr -> LBRACE stringlist RBRACE
Rule 9     setexpr -> ID
Rule 10    stringlist -> enum
Rule 11    enum -> ID
Rule 12    enum -> NUMBER
Rule 13    stringlist -> enum COMMA stringlist
Rule 14    boolexpr -> boolexpr AND boolexpr
Rule 15    boolexpr -> boolexpr OR boolexpr
Rule 16    boolexpr -> boolexpr IMPL boolexpr
Rule 17    boolexpr -> boolexpr EQVI boolexpr
Rule 18    boolexpr -> NOT boolexpr
Rule 19    boolexpr -> PTRUE
Rule 20    boolexpr -> PFALSE
Rule 21    boolexpr -> atom
Rule 22    boolexpr -> LPAREN boolexpr RPAREN
Rule 23    boolexpr -> LBRACK numexpr GT numexpr RBRACK
Rule 24    boolexpr -> LBRACK numexpr LT numexpr RBRACK
Rule 25    boolexpr -> LBRACK numexpr GEQ numexpr RBRACK
Rule 26    boolexpr -> LBRACK numexpr LEQ numexpr RBRACK
Rule 27    boolexpr -> LBRACK numexpr EQ numexpr RBRACK
Rule 28    numexpr -> LPAREN numexpr RPAREN
Rule 29    numexpr -> NUMBER
Rule 30    numexpr -> atom
Rule 31    numexpr -> numexpr PLUS numexpr
Rule 32    numexpr -> numexpr MINUS numexpr
Rule 33    numexpr -> numexpr TIMES numexpr
Rule 34    tnumexpr -> LPAREN numexpr RPAREN
Rule 35    tnumexpr -> NUMBER
Rule 36    tnumexpr -> ID
Rule 37    tnumexpr -> tnumexpr PLUS tnumexpr
Rule 38    tnumexpr -> tnumexpr MINUS tnumexpr
Rule 39    tnumexpr -> tnumexpr TIMES tnumexpr
Rule 40    termlist -> term COMMA termlist
Rule 41    termlist -> term
Rule 42    term -> tnumexpr
Rule 43    atom -> ID
Rule 44    atom -> ID LPAREN termlist RPAREN
Rule 45    initlist -> atom
Rule 46    initlist -> atom COMMA initlist
Rule 47    initlist -> atom EQ NUMBER
Rule 48    initlist -> atom EQ NUMBER COMMA initlist
Rule 49    effects -> effect
Rule 50    effects -> effect effects
Rule 51    effect -> atom SEMICOLON
Rule 52    effect -> NOT atom SEMICOLON
Rule 53    effect -> atom ASSIGN numexpr SEMICOLON
Rule 54    paramlist -> param
Rule 55    paramlist -> param COMMA paramlist
Rule 56    param -> ID COLON setexpr
Rule 57    statement -> TRANSITION ID LPAREN paramlist RPAREN boolexpr LBRACE effects RBRACE
Rule 58    statement -> TRANSITION ID LPAREN RPAREN boolexpr LBRACE effects RBRACE

Terminals, with rules where they appear

AND                  : 14
ASSIGN               : 53
COLON                : 56
COMMA                : 7 13 40 46 48 55
EQ                   : 3 27 47 48
EQVI                 : 17
GEQ                  : 25
GT                   : 23
ID                   : 3 9 11 36 43 44 56 57 58
IMPL                 : 16
LBRACE               : 8 57 58
LBRACK               : 7 23 24 25 26 27
LEQ                  : 26
LPAREN               : 22 28 34 44 57 58
LT                   : 24
MINUS                : 32 38
NOT                  : 18 52
NUMBER               : 7 7 12 29 35 47 48
OR                   : 15
PFALSE               : 20
PLUS                 : 31 37
PTRUE                : 19
RBRACE               : 8 57 58
RBRACK               : 7 23 24 25 26 27
RPAREN               : 22 28 34 44 57 58
SEMICOLON            : 3 4 5 6 51 52 53
SOURCE               : 4
SOURCEFORMULA        : 5
TARGET               : 6
TIMES                : 33 39
TRANSITION           : 57 58
TYPE                 : 3
error                : 

Nonterminals, with rules where they appear

atom                 : 21 30 45 46 47 48 51 52 53
boolexpr             : 5 6 14 14 15 15 16 16 17 17 18 22 57 58
effect               : 49 50
effects              : 50 57 58
enum                 : 10 13
initlist             : 4 46 48
numexpr              : 23 23 24 24 25 25 26 26 27 27 28 31 31 32 32 33 33 34 53
param                : 54 55
paramlist            : 55 57
setexpr              : 3 56
spec                 : 2 0
statement            : 1 2
stringlist           : 8 13
term                 : 40 41
termlist             : 40 44
tnumexpr             : 37 37 38 38 39 39 42

Parsing method: LALR

state 0

    (0) S' -> . spec
    (1) spec -> . statement
    (2) spec -> . statement spec
    (3) statement -> . TYPE ID EQ setexpr SEMICOLON
    (4) statement -> . SOURCE initlist SEMICOLON
    (5) statement -> . SOURCEFORMULA boolexpr SEMICOLON
    (6) statement -> . TARGET boolexpr SEMICOLON
    (57) statement -> . TRANSITION ID LPAREN paramlist RPAREN boolexpr LBRACE effects RBRACE
    (58) statement -> . TRANSITION ID LPAREN RPAREN boolexpr LBRACE effects RBRACE

    TYPE            shift and go to state 3
    SOURCE          shift and go to state 4
    SOURCEFORMULA   shift and go to state 5
    TARGET          shift and go to state 6
    TRANSITION      shift and go to state 7

    spec                           shift and go to state 1
    statement                      shift and go to state 2

state 1

    (0) S' -> spec .



state 2

    (1) spec -> statement .
    (2) spec -> statement . spec
    (1) spec -> . statement
    (2) spec -> . statement spec
    (3) statement -> . TYPE ID EQ setexpr SEMICOLON
    (4) statement -> . SOURCE initlist SEMICOLON
    (5) statement -> . SOURCEFORMULA boolexpr SEMICOLON
    (6) statement -> . TARGET boolexpr SEMICOLON
    (57) statement -> . TRANSITION ID LPAREN paramlist RPAREN boolexpr LBRACE effects RBRACE
    (58) statement -> . TRANSITION ID LPAREN RPAREN boolexpr LBRACE effects RBRACE

    $end            reduce using rule 1 (spec -> statement .)
    TYPE            shift and go to state 3
    SOURCE          shift and go to state 4
    SOURCEFORMULA   shift and go to state 5
    TARGET          shift and go to state 6
    TRANSITION      shift and go to state 7

    statement                      shift and go to state 2
    spec                           shift and go to state 8

state 3

    (3) statement -> TYPE . ID EQ setexpr SEMICOLON

    ID              shift and go to state 9


state 4

    (4) statement -> SOURCE . initlist SEMICOLON
    (45) initlist -> . atom
    (46) initlist -> . atom COMMA initlist
    (47) initlist -> . atom EQ NUMBER
    (48) initlist -> . atom EQ NUMBER COMMA initlist
    (43) atom -> . ID
    (44) atom -> . ID LPAREN termlist RPAREN

    ID              shift and go to state 12

    initlist                       shift and go to state 10
    atom                           shift and go to state 11

state 5

    (5) statement -> SOURCEFORMULA . boolexpr SEMICOLON
    (14) boolexpr -> . boolexpr AND boolexpr
    (15) boolexpr -> . boolexpr OR boolexpr
    (16) boolexpr -> . boolexpr IMPL boolexpr
    (17) boolexpr -> . boolexpr EQVI boolexpr
    (18) boolexpr -> . NOT boolexpr
    (19) boolexpr -> . PTRUE
    (20) boolexpr -> . PFALSE
    (21) boolexpr -> . atom
    (22) boolexpr -> . LPAREN boolexpr RPAREN
    (23) boolexpr -> . LBRACK numexpr GT numexpr RBRACK
    (24) boolexpr -> . LBRACK numexpr LT numexpr RBRACK
    (25) boolexpr -> . LBRACK numexpr GEQ numexpr RBRACK
    (26) boolexpr -> . LBRACK numexpr LEQ numexpr RBRACK
    (27) boolexpr -> . LBRACK numexpr EQ numexpr RBRACK
    (43) atom -> . ID
    (44) atom -> . ID LPAREN termlist RPAREN

    NOT             shift and go to state 14
    PTRUE           shift and go to state 15
    PFALSE          shift and go to state 16
    LPAREN          shift and go to state 18
    LBRACK          shift and go to state 19
    ID              shift and go to state 12

    boolexpr                       shift and go to state 13
    atom                           shift and go to state 17

state 6

    (6) statement -> TARGET . boolexpr SEMICOLON
    (14) boolexpr -> . boolexpr AND boolexpr
    (15) boolexpr -> . boolexpr OR boolexpr
    (16) boolexpr -> . boolexpr IMPL boolexpr
    (17) boolexpr -> . boolexpr EQVI boolexpr
    (18) boolexpr -> . NOT boolexpr
    (19) boolexpr -> . PTRUE
    (20) boolexpr -> . PFALSE
    (21) boolexpr -> . atom
    (22) boolexpr -> . LPAREN boolexpr RPAREN
    (23) boolexpr -> . LBRACK numexpr GT numexpr RBRACK
    (24) boolexpr -> . LBRACK numexpr LT numexpr RBRACK
    (25) boolexpr -> . LBRACK numexpr GEQ numexpr RBRACK
    (26) boolexpr -> . LBRACK numexpr LEQ numexpr RBRACK
    (27) boolexpr -> . LBRACK numexpr EQ numexpr RBRACK
    (43) atom -> . ID
    (44) atom -> . ID LPAREN termlist RPAREN

    NOT             shift and go to state 14
    PTRUE           shift and go to state 15
    PFALSE          shift and go to state 16
    LPAREN          shift and go to state 18
    LBRACK          shift and go to state 19
    ID              shift and go to state 12

    boolexpr                       shift and go to state 20
    atom                           shift and go to state 17

state 7

    (57) statement -> TRANSITION . ID LPAREN paramlist RPAREN boolexpr LBRACE effects RBRACE
    (58) statement -> TRANSITION . ID LPAREN RPAREN boolexpr LBRACE effects RBRACE

    ID              shift and go to state 21


state 8

    (2) spec -> statement spec .

    $end            reduce using rule 2 (spec -> statement spec .)


state 9

    (3) statement -> TYPE ID . EQ setexpr SEMICOLON

    EQ              shift and go to state 22


state 10

    (4) statement -> SOURCE initlist . SEMICOLON

    SEMICOLON       shift and go to state 23


state 11

    (45) initlist -> atom .
    (46) initlist -> atom . COMMA initlist
    (47) initlist -> atom . EQ NUMBER
    (48) initlist -> atom . EQ NUMBER COMMA initlist

    SEMICOLON       reduce using rule 45 (initlist -> atom .)
    COMMA           shift and go to state 24
    EQ              shift and go to state 25


state 12

    (43) atom -> ID .
    (44) atom -> ID . LPAREN termlist RPAREN

    COMMA           reduce using rule 43 (atom -> ID .)
    EQ              reduce using rule 43 (atom -> ID .)
    SEMICOLON       reduce using rule 43 (atom -> ID .)
    AND             reduce using rule 43 (atom -> ID .)
    OR              reduce using rule 43 (atom -> ID .)
    IMPL            reduce using rule 43 (atom -> ID .)
    EQVI            reduce using rule 43 (atom -> ID .)
    RPAREN          reduce using rule 43 (atom -> ID .)
    LBRACE          reduce using rule 43 (atom -> ID .)
    GT              reduce using rule 43 (atom -> ID .)
    LT              reduce using rule 43 (atom -> ID .)
    GEQ             reduce using rule 43 (atom -> ID .)
    LEQ             reduce using rule 43 (atom -> ID .)
    PLUS            reduce using rule 43 (atom -> ID .)
    MINUS           reduce using rule 43 (atom -> ID .)
    TIMES           reduce using rule 43 (atom -> ID .)
    RBRACK          reduce using rule 43 (atom -> ID .)
    ASSIGN          reduce using rule 43 (atom -> ID .)
    LPAREN          shift and go to state 26


state 13

    (5) statement -> SOURCEFORMULA boolexpr . SEMICOLON
    (14) boolexpr -> boolexpr . AND boolexpr
    (15) boolexpr -> boolexpr . OR boolexpr
    (16) boolexpr -> boolexpr . IMPL boolexpr
    (17) boolexpr -> boolexpr . EQVI boolexpr

    SEMICOLON       shift and go to state 27
    AND             shift and go to state 28
    OR              shift and go to state 29
    IMPL            shift and go to state 30
    EQVI            shift and go to state 31


state 14

    (18) boolexpr -> NOT . boolexpr
    (14) boolexpr -> . boolexpr AND boolexpr
    (15) boolexpr -> . boolexpr OR boolexpr
    (16) boolexpr -> . boolexpr IMPL boolexpr
    (17) boolexpr -> . boolexpr EQVI boolexpr
    (18) boolexpr -> . NOT boolexpr
    (19) boolexpr -> . PTRUE
    (20) boolexpr -> . PFALSE
    (21) boolexpr -> . atom
    (22) boolexpr -> . LPAREN boolexpr RPAREN
    (23) boolexpr -> . LBRACK numexpr GT numexpr RBRACK
    (24) boolexpr -> . LBRACK numexpr LT numexpr RBRACK
    (25) boolexpr -> . LBRACK numexpr GEQ numexpr RBRACK
    (26) boolexpr -> . LBRACK numexpr LEQ numexpr RBRACK
    (27) boolexpr -> . LBRACK numexpr EQ numexpr RBRACK
    (43) atom -> . ID
    (44) atom -> . ID LPAREN termlist RPAREN

    NOT             shift and go to state 14
    PTRUE           shift and go to state 15
    PFALSE          shift and go to state 16
    LPAREN          shift and go to state 18
    LBRACK          shift and go to state 19
    ID              shift and go to state 12

    boolexpr                       shift and go to state 32
    atom                           shift and go to state 17

state 15

    (19) boolexpr -> PTRUE .

    SEMICOLON       reduce using rule 19 (boolexpr -> PTRUE .)
    AND             reduce using rule 19 (boolexpr -> PTRUE .)
    OR              reduce using rule 19 (boolexpr -> PTRUE .)
    IMPL            reduce using rule 19 (boolexpr -> PTRUE .)
    EQVI            reduce using rule 19 (boolexpr -> PTRUE .)
    RPAREN          reduce using rule 19 (boolexpr -> PTRUE .)
    LBRACE          reduce using rule 19 (boolexpr -> PTRUE .)


state 16

    (20) boolexpr -> PFALSE .

    SEMICOLON       reduce using rule 20 (boolexpr -> PFALSE .)
    AND             reduce using rule 20 (boolexpr -> PFALSE .)
    OR              reduce using rule 20 (boolexpr -> PFALSE .)
    IMPL            reduce using rule 20 (boolexpr -> PFALSE .)
    EQVI            reduce using rule 20 (boolexpr -> PFALSE .)
    RPAREN          reduce using rule 20 (boolexpr -> PFALSE .)
    LBRACE          reduce using rule 20 (boolexpr -> PFALSE .)


state 17

    (21) boolexpr -> atom .

    SEMICOLON       reduce using rule 21 (boolexpr -> atom .)
    AND             reduce using rule 21 (boolexpr -> atom .)
    OR              reduce using rule 21 (boolexpr -> atom .)
    IMPL            reduce using rule 21 (boolexpr -> atom .)
    EQVI            reduce using rule 21 (boolexpr -> atom .)
    RPAREN          reduce using rule 21 (boolexpr -> atom .)
    LBRACE          reduce using rule 21 (boolexpr -> atom .)


state 18

    (22) boolexpr -> LPAREN . boolexpr RPAREN
    (14) boolexpr -> . boolexpr AND boolexpr
    (15) boolexpr -> . boolexpr OR boolexpr
    (16) boolexpr -> . boolexpr IMPL boolexpr
    (17) boolexpr -> . boolexpr EQVI boolexpr
    (18) boolexpr -> . NOT boolexpr
    (19) boolexpr -> . PTRUE
    (20) boolexpr -> . PFALSE
    (21) boolexpr -> . atom
    (22) boolexpr -> . LPAREN boolexpr RPAREN
    (23) boolexpr -> . LBRACK numexpr GT numexpr RBRACK
    (24) boolexpr -> . LBRACK numexpr LT numexpr RBRACK
    (25) boolexpr -> . LBRACK numexpr GEQ numexpr RBRACK
    (26) boolexpr -> . LBRACK numexpr LEQ numexpr RBRACK
    (27) boolexpr -> . LBRACK numexpr EQ numexpr RBRACK
    (43) atom -> . ID
    (44) atom -> . ID LPAREN termlist RPAREN

    NOT             shift and go to state 14
    PTRUE           shift and go to state 15
    PFALSE          shift and go to state 16
    LPAREN          shift and go to state 18
    LBRACK          shift and go to state 19
    ID              shift and go to state 12

    boolexpr                       shift and go to state 33
    atom                           shift and go to state 17

state 19

    (23) boolexpr -> LBRACK . numexpr GT numexpr RBRACK
    (24) boolexpr -> LBRACK . numexpr LT numexpr RBRACK
    (25) boolexpr -> LBRACK . numexpr GEQ numexpr RBRACK
    (26) boolexpr -> LBRACK . numexpr LEQ numexpr RBRACK
    (27) boolexpr -> LBRACK . numexpr EQ numexpr RBRACK
    (28) numexpr -> . LPAREN numexpr RPAREN
    (29) numexpr -> . NUMBER
    (30) numexpr -> . atom
    (31) numexpr -> . numexpr PLUS numexpr
    (32) numexpr -> . numexpr MINUS numexpr
    (33) numexpr -> . numexpr TIMES numexpr
    (43) atom -> . ID
    (44) atom -> . ID LPAREN termlist RPAREN

    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 36
    ID              shift and go to state 12

    numexpr                        shift and go to state 34
    atom                           shift and go to state 37

state 20

    (6) statement -> TARGET boolexpr . SEMICOLON
    (14) boolexpr -> boolexpr . AND boolexpr
    (15) boolexpr -> boolexpr . OR boolexpr
    (16) boolexpr -> boolexpr . IMPL boolexpr
    (17) boolexpr -> boolexpr . EQVI boolexpr

    SEMICOLON       shift and go to state 38
    AND             shift and go to state 28
    OR              shift and go to state 29
    IMPL            shift and go to state 30
    EQVI            shift and go to state 31


state 21

    (57) statement -> TRANSITION ID . LPAREN paramlist RPAREN boolexpr LBRACE effects RBRACE
    (58) statement -> TRANSITION ID . LPAREN RPAREN boolexpr LBRACE effects RBRACE

    LPAREN          shift and go to state 39


state 22

    (3) statement -> TYPE ID EQ . setexpr SEMICOLON
    (7) setexpr -> . LBRACK NUMBER COMMA NUMBER RBRACK
    (8) setexpr -> . LBRACE stringlist RBRACE
    (9) setexpr -> . ID

    LBRACK          shift and go to state 42
    LBRACE          shift and go to state 43
    ID              shift and go to state 40

    setexpr                        shift and go to state 41

state 23

    (4) statement -> SOURCE initlist SEMICOLON .

    TYPE            reduce using rule 4 (statement -> SOURCE initlist SEMICOLON .)
    SOURCE          reduce using rule 4 (statement -> SOURCE initlist SEMICOLON .)
    SOURCEFORMULA   reduce using rule 4 (statement -> SOURCE initlist SEMICOLON .)
    TARGET          reduce using rule 4 (statement -> SOURCE initlist SEMICOLON .)
    TRANSITION      reduce using rule 4 (statement -> SOURCE initlist SEMICOLON .)
    $end            reduce using rule 4 (statement -> SOURCE initlist SEMICOLON .)


state 24

    (46) initlist -> atom COMMA . initlist
    (45) initlist -> . atom
    (46) initlist -> . atom COMMA initlist
    (47) initlist -> . atom EQ NUMBER
    (48) initlist -> . atom EQ NUMBER COMMA initlist
    (43) atom -> . ID
    (44) atom -> . ID LPAREN termlist RPAREN

    ID              shift and go to state 12

    atom                           shift and go to state 11
    initlist                       shift and go to state 44

state 25

    (47) initlist -> atom EQ . NUMBER
    (48) initlist -> atom EQ . NUMBER COMMA initlist

    NUMBER          shift and go to state 45


state 26

    (44) atom -> ID LPAREN . termlist RPAREN
    (40) termlist -> . term COMMA termlist
    (41) termlist -> . term
    (42) term -> . tnumexpr
    (34) tnumexpr -> . LPAREN numexpr RPAREN
    (35) tnumexpr -> . NUMBER
    (36) tnumexpr -> . ID
    (37) tnumexpr -> . tnumexpr PLUS tnumexpr
    (38) tnumexpr -> . tnumexpr MINUS tnumexpr
    (39) tnumexpr -> . tnumexpr TIMES tnumexpr

    LPAREN          shift and go to state 47
    NUMBER          shift and go to state 51
    ID              shift and go to state 46

    termlist                       shift and go to state 48
    term                           shift and go to state 49
    tnumexpr                       shift and go to state 50

state 27

    (5) statement -> SOURCEFORMULA boolexpr SEMICOLON .

    TYPE            reduce using rule 5 (statement -> SOURCEFORMULA boolexpr SEMICOLON .)
    SOURCE          reduce using rule 5 (statement -> SOURCEFORMULA boolexpr SEMICOLON .)
    SOURCEFORMULA   reduce using rule 5 (statement -> SOURCEFORMULA boolexpr SEMICOLON .)
    TARGET          reduce using rule 5 (statement -> SOURCEFORMULA boolexpr SEMICOLON .)
    TRANSITION      reduce using rule 5 (statement -> SOURCEFORMULA boolexpr SEMICOLON .)
    $end            reduce using rule 5 (statement -> SOURCEFORMULA boolexpr SEMICOLON .)


state 28
